<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_apn_content"
    android:visibility="visible"
    tools:context=".AddAPNActivity"
    tools:visibility="visible">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:id="@+id/add_apn_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/add_mcc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/add_mcc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FFFFFF"
            android:maxLength="3"
            android:digits="0123456789"
            android:hint="@string/mcc"
            android:inputType="textFilter"
            app:layout_constraintBottom_toTopOf="@+id/add_mnc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_apn_ll" />

        <EditText
            android:id="@+id/add_mnc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/mnc"
            android:digits="0123456789"
            android:maxLength="3"
            android:inputType="textFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_mcc" />

        <EditText
            android:id="@+id/add_apn_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/apn_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_mnc" />

        <EditText
            android:id="@+id/add_apn_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/apn_type"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_apn_name" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_apn_type">
            <TextView
                android:id="@+id/protocol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose protocol to be used:"
            />
            <RadioButton android:id="@+id/protocol_ipv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipv4"/>
            <RadioButton android:id="@+id/protocol_ipv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipv6"/>
            <RadioButton android:id="@+id/protocol_ipv4v6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipv4v6"/>
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_roaming_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_protocol">
            <TextView
                android:id="@+id/roaming_protocol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose roaming protocol to be used:"
            />
            <RadioButton android:id="@+id/roaming_protocol_ipv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipv4"/>
            <RadioButton android:id="@+id/roaming_protocol_ipv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipv6"/>
            <RadioButton android:id="@+id/roaming_protocol_ipv4v6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipv4v6"/>
        </RadioGroup>

        <CheckBox android:id="@+id/preferred_apn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:text="@string/preferred_apn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_roaming_protocol"/>

        <Button
            android:id="@+id/add_apns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="54dp"
            android:onClick="addAPN"
            android:text="@string/add_apn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preferred_apn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>